NetBSD Problem Report #55146

From gson@gson.org  Mon Apr  6 06:17:53 2020
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 3C4331A9213
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  6 Apr 2020 06:17:53 +0000 (UTC)
Message-Id: <20200406061748.3316125445F@guava.gson.org>
Date: Mon,  6 Apr 2020 09:17:48 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: 100+ file system test cases failing
X-Send-Pr-Version: 3.95

>Number:         55146
>Category:       kern
>Synopsis:       100+ file system test cases failing
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    ad
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Apr 06 06:20:00 +0000 2020
>Closed-Date:    Wed Apr 08 06:39:33 +0000 2020
>Last-Modified:  Wed Apr 08 06:39:33 +0000 2020
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2020.04.05.00.36.25
>Organization:

>Environment:
System: NetBSD
Architecture: x86_64
Machine: amd64
>Description:

Running the ATF tests on real hardware, more than 100 file system
tests are now failing.  For logs, see

  http://www.gson.org/netbsd/bugs/build/amd64-baremetal/commits-2020.04.html#2020.04.05.00.36.25

The problem started during the period of build breakage that ended
with

  2020.04.05.00.36.25 christos src/etc/Makefile 1.443

It's hard to tell exactly when the build breakage started as the build
has been failing in several different ways and may or may not have
built inbetween them, but at least 2020.04.04.19.26.51 still built
on i386.

There has been no automated report to current-users as the i386
testbed responsible for sending those is currently unable to run the
tests to completion because of the issue discussed in PR 54786.

>How-To-Repeat:

Run the ATF tests on amd64.

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Mon, 06 Apr 2020 20:08:16 +0000
Responsible-Changed-Why:
Mine


From: "J. Hannken-Illjes" <hannken@eis.cs.tu-bs.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55146 (100+ file system test cases failing)
Date: Tue, 7 Apr 2020 09:17:31 +0200

 --Apple-Mail=_6CF9AB13-FD2E-478F-B35A-BFF24D945FB9
 Content-Type: multipart/mixed;
 	boundary="Apple-Mail=_92E7451C-DB59-4ACF-BF72-91780A62D9F6"


 --Apple-Mail=_92E7451C-DB59-4ACF-BF72-91780A62D9F6
 Content-Transfer-Encoding: 7bit
 Content-Type: text/plain;
 	charset=us-ascii

 - UDF errors should be gone with sys/fs/udf/udf_subr.c Rev. 1.150

 - *toolong* fail because errors from lookup_fastforward() are
 ignored.  The attached diff would help but needs more review
 as we might hide more errors here.

 --
 J. Hannken-Illjes - hannken@eis.cs.tu-bs.de - TU Braunschweig

 --Apple-Mail=_92E7451C-DB59-4ACF-BF72-91780A62D9F6
 Content-Disposition: attachment;
 	filename=001_lookup.diff
 Content-Type: application/octet-stream;
 	x-unix-mode=0644;
 	name="001_lookup.diff"
 Content-Transfer-Encoding: 7bit

 lookup

 ENAMETOOLONG is final and must not be ignored.

 diff -r 777271188cd1 -r 3950cceb5ec3 sys/kern/vfs_lookup.c
 --- sys/kern/vfs_lookup.c
 +++ sys/kern/vfs_lookup.c
 @@ -1472,7 +1472,7 @@ namei_oneroot(struct namei_state *state,
  		 * If we didn't get a good answer from the namecache, then
  		 * go directly to the file system.
  		 */
 -		if (error != 0 && error != ENOENT) {
 +		if (error != 0 && error != ENOENT && error != ENAMETOOLONG) {
  			error = lookup_once(state, searchdir, &searchdir,
  			    &foundobj, &searchdir_locked);
  		}

 --Apple-Mail=_92E7451C-DB59-4ACF-BF72-91780A62D9F6--

 --Apple-Mail=_6CF9AB13-FD2E-478F-B35A-BFF24D945FB9
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
 	filename=signature.asc
 Content-Type: application/pgp-signature;
 	name=signature.asc
 Content-Description: Message signed with OpenPGP

 -----BEGIN PGP SIGNATURE-----

 iQEzBAEBCAAdFiEE2BL3ha7Xao4WUZVYKoaVJdNr+uEFAl6MKQsACgkQKoaVJdNr
 +uGH9gf9FtoAWnMiv9K5Lrb6OAGcYZG3N7rishpuiRwUMxBNePcH1l2ryuA6kMnI
 8PvQU7MSq8K7L9mHYHfCWG9ahCKAuUc9Q46Hp/arRQ4d5Qg7ywu11WWeynfKwIGN
 DRk1KTIkW0zIf92QoQcUIStCpCNUseLlEs5irPyjb0V8ZVUmYsoNwQcQCs1ol3af
 8qzLGLAO/BqN4+L8B5g90r1xLtUsVi6MZ7lDPLgqWLJyX6fyYDu4VmVOdHQolJUX
 /8HwCmps5zJJfQOe1ffPjMmFNCQGEMlNa9AINS6X+QrIxVGaZJ77EXaFXJCloWG7
 FC3N+chi0x3wdOYej06fQ51sFuXr3A==
 =ipe4
 -----END PGP SIGNATURE-----

 --Apple-Mail=_6CF9AB13-FD2E-478F-B35A-BFF24D945FB9--

From: "J. Hannken-Illjes" <hannken@eis.cs.tu-bs.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55146 (100+ file system test cases failing)
Date: Tue, 7 Apr 2020 13:50:25 +0200

 --Apple-Mail=_9AF0EA27-EB4D-4201-94CA-D39FE9422DE9
 Content-Type: multipart/mixed;
 	boundary="Apple-Mail=_AC7D3654-3FD4-448E-9BE4-D9C4EE10CB78"


 --Apple-Mail=_AC7D3654-3FD4-448E-9BE4-D9C4EE10CB78
 Content-Transfer-Encoding: 7bit
 Content-Type: text/plain;
 	charset=us-ascii

 With the attached diff all tests from /usr/tests/fs pass.

 --
 J. Hannken-Illjes - hannken@eis.cs.tu-bs.de - TU Braunschweig

 --Apple-Mail=_AC7D3654-3FD4-448E-9BE4-D9C4EE10CB78
 Content-Disposition: attachment;
 	filename=002_lookup.diff
 Content-Type: application/octet-stream;
 	x-unix-mode=0644;
 	name="002_lookup.diff"
 Content-Transfer-Encoding: 7bit

 lookup

 Set foundobj also if != VDIR.

 diff -r 0d0a431c8f29 -r 421f8544b9d7 sys/kern/vfs_lookup.c
 --- sys/kern/vfs_lookup.c
 +++ sys/kern/vfs_lookup.c
 @@ -1005,11 +1005,12 @@ lookup_crossmount(struct namei_state *st
  		} else if (foundobj->v_type == VDIR) {
  			vrele(searchdir);
  			*searchdir_ret = searchdir = NULL;
 -			*foundobj_ret = foundobj;
  			lktype = LK_NONE;
  		}
  	}

 +	*foundobj_ret = foundobj;
 +
  	/* If searchdir is still around, re-lock it. */
   	if (error == 0 && lktype != LK_NONE) {
  		vn_lock(searchdir, lktype | LK_RETRY);

 --Apple-Mail=_AC7D3654-3FD4-448E-9BE4-D9C4EE10CB78--

 --Apple-Mail=_9AF0EA27-EB4D-4201-94CA-D39FE9422DE9
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
 	filename=signature.asc
 Content-Type: application/pgp-signature;
 	name=signature.asc
 Content-Description: Message signed with OpenPGP

 -----BEGIN PGP SIGNATURE-----

 iQEzBAEBCAAdFiEE2BL3ha7Xao4WUZVYKoaVJdNr+uEFAl6MaQEACgkQKoaVJdNr
 +uEc2wf9FeA1zk/mBjlXgCYIm7XEV8x7nnFAaaIe9pISoPnZ7ELwGDgL8P6ggJ5c
 80M3csj8pC56EDClmuJx0DjoeUXc8JI3WpI3lMLKignFHcEvpIZKiCDkhYFeAu4p
 XuTIpQN65dd04dwNj2yreo7gnQGWghLyg57UZwAHJsMKRD/G+Dl+xnQ61dPwj2iQ
 /JE03C9f0jJM84B2OCtmF0A57jNMsCmPHGAbT283p2UCUX5Nyg6mkepkU18tat8U
 WLfjoshoJosc0oIELjma59wUnr2/8cRJ5jCXwQTLs9BldXK1xnYxBcK79Xvlz9L0
 GpEXnxu+MZ63baZfyOHFKMMo7O+GFA==
 =Q6gs
 -----END PGP SIGNATURE-----

 --Apple-Mail=_9AF0EA27-EB4D-4201-94CA-D39FE9422DE9--

From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org,
	Andreas Gustafsson <gson@gson.org>
Subject: Re: kern/55146 (100+ file system test cases failing)
Date: Tue, 7 Apr 2020 17:13:57 +0000

 On Tue, Apr 07, 2020 at 07:20:01AM +0000, J. Hannken-Illjes wrote:

 >  - *toolong* fail because errors from lookup_fastforward() are
 >  ignored.  The attached diff would help but needs more review
 >  as we might hide more errors here.

 Overloading the return value here sucks so I'll think about a different
 method.  In the meantime I'll take a look at your change and probably
 commit it.

 Thank you,
 Andrew

From: "Andrew Doran" <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55146 CVS commit: src/sys/kern
Date: Tue, 7 Apr 2020 18:28:32 +0000

 Module Name:	src
 Committed By:	ad
 Date:		Tue Apr  7 18:28:32 UTC 2020

 Modified Files:
 	src/sys/kern: vfs_lookup.c

 Log Message:
 PR kern/55146 (100+ file system test cases failing)

 - namei_oneroot(): key on negative return from lookup_fastforward()
   (EOPNOTSUPP), not positive.

 - lookup_crossmount(): don't lose track of founddir.

 From hannken@, with a couple of tweaks.


 To generate a diff of this commit:
 cvs rdiff -u -r1.215 -r1.216 src/sys/kern/vfs_lookup.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: ad@NetBSD.org
State-Changed-When: Tue, 07 Apr 2020 19:23:44 +0000
State-Changed-Why:
this should be fixed now


State-Changed-From-To: feedback->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Wed, 08 Apr 2020 06:39:33 +0000
State-Changed-Why:
Confirmed fixed, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.